# py_cw_4_oop

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: config.py  exceptions.py  hh_api.py  saver.py  utils.py  vacancy.py
tests/: conftest.py  test_hh_api.py  test_utils.py  test_vacancy.py
